# mai_object-oriented-programming_lab-5

./: .gitignore  CMakeLists.txt  Makefile  README.md  tests.cpp
include/: CustomMemoryResource.hpp  CustomStack.hpp  Person.hpp  Stack.hpp
src/: main.cpp
